Fixed dot-nav overlap

--- a/scss/styles.scss
+++ b/scss/styles.scss
@@ -557,8 +557,8 @@ body{
 		-webkit-perspective: 1000;
 		transition: right .5s $bezier;
 		
-		@include mq_once(1140px){
-			margin-right: 2.5%;
+		@include mq_once(1230px){
+			margin-right: 50px;
 		}
 
 		@include mq(screens1){
